sassコンパイルするコマンド記述

--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "dev": "nodemon server.js"
+    "dev": "nodemon server.js",
+    "sass": "sass src/style.scss css/style.css"
   },
   "keywords": [],
   "author": "",
